--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "barebone",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Nicholas Cunningham",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
